--- a/college.html
+++ b/college.html
@@ -1,3 +1,3 @@
-<p id="notice">Important Notice: College will remain closed tomorrow.</p>
+<p id="notice">Important Notice: College will remain open tomorrow.</p>
 
 <script src="notice.js"></script>
